# hpm-hal

./: Cargo.toml  build.rs  memory.x
examples/: blinky.rs  hello-world.rs  uart-dma.rs
examples/gpio-interrupt/: main.rs
examples/spi-lcd/: main.rs
