[package]
name = "hpm-hal"
authors = ["tfx2001 <tfx2001@outlook.com>"]
description = "Hardware Abstract Layer for HPMicro microcontrollers"
repository = "https://github.com/hpm-rs/hpm-hal"
readme = "README.md"
keywords = ["hpmicro", "embedded", "no_std"]
categories = ["embedded", "no-std"]
license = "MIT"
edition = "2021"
include = ["src/*", "build.rs", "Cargo.toml", "doc.md"]
version = "0.0.1"

[dependencies]
hpm-ral = { path = "../hpm-ral" }
embedded-hal = "0.2"
nb = "1.0"

[dev-dependencies]
riscv = "0.10"
plic = { version = "0.0.2", features = ["primitive-id"] }
hpm-rt = { git = "https://github.com/hpm-rs/hpm-rt" }
panic-halt = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
display-interface-spi = "0.4"
st7789 = "0.7"
embedded-graphics = "0.7"
critical-section = "1.1"

[lib]
bench = false
test = false

[features]
default = ["hpm6750"]
rt = ["hpm-ral/rt", "riscv/critical-section-single-hart"]
hpm6750 = ["hpm-ral/hpm6750"]

[[example]]
name = "blinky"

[[example]]
name = "hello-world"

[[example]]
name = "uart-dma"

[[example]]
name = "gpio-interrupt"
required-features = ["rt"]

[[example]]
name = "spi-lcd"
